# elephant-broker

./: .gitignore  CLAUDE.md  Dockerfile  README.md  elephantbroker-hitl.service  elephantbroker.service  pyproject.toml  requirements_hitl.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
deploy/: UPDATING-DEPS.md  install.sh  update.sh
deploy/systemd/: elephantbroker-hitl.service  elephantbroker.service
docs/: CONFIGURATION.md  DEPLOYMENT.md  OPENCLAW-SETUP.md  elephantbroker_architecture_v1.html  openclaw-contract-mapping.md
elephantbroker/: __init__.py  __main__.py  cli.py  server.py
elephantbroker/api/: app.py  deps.py
elephantbroker/codegen/: generate_ts_types.py
elephantbroker/config/: default.yaml  env.example
elephantbroker/db/: alembic.ini  env.py
elephantbroker/runtime/: container.py  graph_utils.py  identity.py  identity_utils.py  metrics.py  observability.py  redis_keys.py
elephantbroker/schemas/: actor.py  artifact.py  base.py  config.py  consolidation.py  context.py  evidence.py  fact.py  goal.py  guards.py  lifecycle.py  pipeline.py  procedure.py  profile.py  scoring.py  tiers.py  trace.py  working_set.py
hitl-middleware/: Dockerfile  hitl.env.example  pyproject.toml
hitl-middleware/hitl_middleware/: __init__.py  __main__.py  app.py  config.py  models.py  router.py  security.py
hitl-middleware/hitl_middleware/plugins/: base.py  registry.py
hitl-middleware/hitl_middleware/plugins/webhook/: config.py  plugin.py
hitl-middleware/tests/e2e/: conftest.py  test_error_recovery.py  test_full_lifecycle.py
hitl-middleware/tests/integration/: conftest.py  test_approval_flow.py  test_hmac_roundtrip.py  test_multi_plugin.py  test_notify_flow.py  test_trace_propagation.py  test_webhook_delivery.py
hitl-middleware/tests/unit/: test_app.py  test_config.py  test_models.py  test_plugin_base.py  test_registry.py  test_router_approval.py  test_router_callbacks.py  test_router_health.py  test_router_notify.py  test_security.py  test_webhook_config.py  test_webhook_plugin.py
infrastructure/: .env.prod  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  otel-collector-config.yaml
infrastructure/postgres/: init.sql
local/: DEPLOYMENT-FIXES.md  FIX-GATEWAY-IDENTITY-PLAN.md  FIX-PLAN-Ingest-Architecture.md  FIX-PLAN-Phase-2.md  FIX-PLAN-Phase-3.md  FIX-PLAN-Pre-Prompt-Ingest-Pipeline.md  IMPLEMENTATION-PLAN-NAT-OPENSHELL-INTEGRATION.md  IMPLEMENTATION-PLAN-Phase-0.md  IMPLEMENTATION-PLAN-Phase-1.md  IMPLEMENTATION-PLAN-Phase-10.md  IMPLEMENTATION-PLAN-Phase-11.md  IMPLEMENTATION-PLAN-Phase-12.md  IMPLEMENTATION-PLAN-Phase-2.md  IMPLEMENTATION-PLAN-Phase-3.md  IMPLEMENTATION-PLAN-Phase-3b-postfix.md  IMPLEMENTATION-PLAN-Phase-4.md  IMPLEMENTATION-PLAN-Phase-5.md  IMPLEMENTATION-PLAN-Phase-6.md  IMPLEMENTATION-PLAN-Phase-7.md  IMPLEMENTATION-PLAN-Phase-8.md  IMPLEMENTATION-PLAN-Phase-9.md  IMPLEMENTATION-PLAN.md  IMPLEMENTED-Batch8-draft.md  IMPLEMENTED-FIX-Gateway-Identity.md  IMPLEMENTED-FIX-Phase-2.md  IMPLEMENTED-FIX-Phase-3.md  IMPLEMENTED-FIX-Phase-3b.md  IMPLEMENTED-OLD-PR-11-merge.md  IMPLEMENTED-OLD-PR-12-merge.md  IMPLEMENTED-OLD-PR-4-merge.md  IMPLEMENTED-OLD-PR-7-merge.md  IMPLEMENTED-OLD-PR-8-merge.md  IMPLEMENTED-OLD-PR-9-merge.md  IMPLEMENTED-PR-10-merge.md  IMPLEMENTED-PR-11-merge.md  IMPLEMENTED-PR-3-merge.md  IMPLEMENTED-PR-5-merge.md  IMPLEMENTED-PR-6-merge.md  IMPLEMENTED-PR-7-merge.md  IMPLEMENTED-PR-8-merge.md  (+17 more)
local/pr-heartbeats/: HEARTBEAT-PR10.md
local/research-paper/: arxiv-elephant-broker-paper.aux  arxiv-elephant-broker-paper.out  arxiv-elephant-broker-paper.tex  elephant-broker-paper.aux  elephant-broker-paper.out  elephant-broker-paper.tex  template.tex
local/teams/: DEBUGGING.md  REVIEWING.md  TEAM-PROTOCOLS.md
local/testing-plans/: BATCH2-GOAL-RESEARCH.md  BATCH3-GUARD-RESEARCH.md  BATCH3-PHASE6-CONTEXT-FLOWS.md  BATCH4-e2e-flows.md  BATCH4-issues.md  BUSINESS-LOGIC-FEATURES-TESTING-FLOWS-APPROACH.md  BUSINESS-LOGIC-FEATURES-TESTING-FLOWS-P0.md  BUSINESS-LOGIC-FEATURES-TESTING-FLOWS-P1.md  BUSINESS-LOGIC-FEATURES-TESTING-FLOWS-P2.md  BUSINESS-LOGIC-FEATURES-TESTING-FLOWS.md  BUSINESS-LOGIC-FEATURES-TESTING-PLAN.md  FIX-PLAN-GF15-DISPOSE.md  FULL-TESTING-PLAN.md  PROMPT-TESTING-FLOWS.md
openclaw-plugins/elephantbroker-context/: client.ts  engine.ts  openclaw.plugin.json  package-lock.json  package.json  types.ts  vitest.config.ts
openclaw-plugins/elephantbroker-memory/: index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
openclaw-plugins/shared/: README.md
scripts/: run-integration-tests.sh  verify-plugin-dist.sh
tests/: conftest.py
tests/fixtures/: factories.py
tests/integration/: conftest.py  test_infra_health.py
tests/scenarios/: base.py  live_adapter.py  live_verify_batch3_fixes.py  openclaw_client.py  runner.py  scenario_basic_memory.py  scenario_context_lifecycle.py  scenario_goal_driven.py  scenario_guard_check.py  scenario_multi_turn_memory.py  scenario_procedure_execution.py  scenario_subagent_lifecycle.py
tests/unit/: conftest.py  test_batch4_fixes.py  test_batch4_review_coverage.py  test_cli.py  test_deployment_fixes.py  test_factories.py  test_scaffolding.py
(+379 files in other folders)
