[project]
name = "hitl-middleware"
version = "0.1.0"
description = "Human-in-the-Loop middleware for ElephantBroker guard approval workflows"
# Match the root project's Python range exactly. uv workspace members must
# resolve against the same Python version as the root or `uv lock` rejects
# the workspace as inconsistent.
requires-python = ">=3.11,<3.13"
license = "AGPL-3.0-only"
# Floor-only constraints — the root uv.lock is authoritative for the actual
# resolved versions in workspace mode. These floors only matter if someone
# installs hitl-middleware standalone (outside the workspace), which our
# deploy scripts no longer do.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.0,<3.0",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
]

[project.scripts]
# Console script entry point — installed into .venv/bin/hitl-middleware
# by `uv sync`. The systemd unit calls this binary directly instead of
# `python -m hitl_middleware` (resolves TODO-3-323 / TODO-3-610).
hitl-middleware = "hitl_middleware.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hitl_middleware*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
